add regester
