# api-gateway_first/api/docs/swagger.json
@@ -7,6 +7,9 @@
         "/v1/users": {
             "get": {
                 "description": "This api is using for getting users list",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -41,6 +44,9 @@
             },
             "post": {
                 "description": "This api is using for creating new user",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -69,9 +75,110 @@
                 }
             }
         },
+        "/v1/users/login/{email}/{password}": {
+            "post": {
+                "description": "This api using for logging registered user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/users/register": {
+            "post": {
+                "description": "This api is using for registering new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Register user summary",
+                "parameters": [
+                    {
+                        "description": "user_body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users/verfication": {
+            "post": {
+                "description": "This api using for verifying registered user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "parameters": [
+                    {
+                        "description": "user body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.Emailver"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users/{id}": {
             "get": {
                 "description": "This api is using for getting user by id",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -99,6 +206,9 @@
             },
             "put": {
                 "description": "This api is using for updating new user",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -181,6 +291,17 @@
                 }
             }
         },
+        "v1.Emailver": {
+            "type": "object",
+            "properties": {
+                "Code": {
+                    "type": "string"
+                },
+                "Email": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.Media": {
             "type": "object",
             "properties": {
@@ -224,23 +345,31 @@
                 "bio": {
                     "type": "string"
                 },
-                "created_at": {
+                "code": {
                     "type": "string"
                 },
-                "deleted_at": {
+                "createdAt": {
                     "type": "string"
                 },
-                "first_name": {
+                "deletedAt": {
                     "type": "string"
                 },
-                "last_name": {
+                "email": {
                     "type": "string"
                 },
-                "name": {
-                    "description": "Id                   string    `protobuf:\"bytes,1,opt,name=id,proto3\" json:\"id\"`",
+                "firstName": {
                     "type": "string"
                 },
-                "phone_numbers": {
+                "id": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phoneNumbers": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -255,7 +384,10 @@
                 "status": {
                     "type": "string"
                 },
-                "update_at": {
+                "updateAt": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
