# api-gateway_first/api/router.go
@@ -2,11 +2,12 @@ package api
 
 import (
 	"github.com/gin-gonic/gin"
-	_ "github.com/najimovmashhurbek/Project_Api/api-gateway_first/api/docs" //swag
 	v1 "github.com/najimovmashhurbek/Project_Api/api-gateway_first/api/handlers/v1"
 	"github.com/najimovmashhurbek/Project_Api/api-gateway_first/config"
+	_ "github.com/najimovmashhurbek/Project_Api/api-gateway_first/api/docs" //swag
 	"github.com/najimovmashhurbek/Project_Api/api-gateway_first/pkg/logger"
 	"github.com/najimovmashhurbek/Project_Api/api-gateway_first/services"
+	"github.com/najimovmashhurbek/Project_Api/api-gateway_first/storage/repo"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -16,6 +17,7 @@ type Option struct {
 	Conf           config.Config
 	Logger         logger.Logger
 	ServiceManager services.IServiceManager
+	RedisRepo      repo.RepositoryStorage
 }
 
 // New ...
@@ -29,6 +31,7 @@ func New(option Option) *gin.Engine {
 		Logger:         option.Logger,
 		ServiceManager: option.ServiceManager,
 		Cfg:            option.Conf,
+		Redis:          option.RedisRepo,
 	})
 
 	api := router.Group("/v1")
@@ -37,9 +40,12 @@ func New(option Option) *gin.Engine {
 	api.GET("/users", handlerV1.ListUsers)
 	api.PUT("/users/:id", handlerV1.UpdateUser)
 	api.DELETE("/users/:id", handlerV1.DeleteUser)
+	api.POST("/users/register", handlerV1.Register)
+	api.POST("/users/verfication", handlerV1.VerifyUser)
+	api.POST("/users/login/:email/:password", handlerV1.Login)
 
-	url:=ginSwagger.URL("swagger/doc.json")
-	router.GET("/swagger/*any",ginSwagger.WrapHandler(swaggerFiles.Handler, url))
+	url := ginSwagger.URL("swagger/doc.json")
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 
 	return router
 }
